// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable component Renders drag handles for draggable table rows 1`] = `
@media  {
  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-fZTBsJ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-fZTBsJ:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-fZTBsJ[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fZTBsJ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }

  .c-eIXSIu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-variant-numeric: tabular-nums;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-beXZpM {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-beXZpM:hover {
    cursor: pointer;
  }

  .c-beXZpM:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-beXZpM::-ms-expand {
    display: none;
  }

  .c-beXZpM[disabled],
  .c-beXZpM > option[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-dlcCnN {
    color: inherit !important;
    fill: currentColor;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-fZTBsJ-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-OveXb-size-md {
    top: 10px;
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-gzzGYN-theme-light .c-GSaiK {
    background: var(--colors-tonal50);
    color: var(--colors-tonal600);
  }

  .c-PJLV-kqWICR-striped-false {
    background: white;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-beXZpM-cGAtlD-size-sm {
    background-position: right var(--space-2) top 50%, 0 0;
    background-size: 18px auto, 100%;
    font-size: var(--fontSizes-sm);
    height: var(--sizes-3);
    padding-left: var(--space-2);
    padding-right: var(--space-5);
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-fDzwZw-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-dbrbZt-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-fDzwZw-elrktp-size-sm {
    height: var(--sizes-3);
    width: var(--sizes-3);
  }

  .c-dlcCnN-kbKHjH-isDragging-false {
    cursor: grab;
  }
}

@media  {
  .c-fDzwZw-jpgoGt-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):hover,
  .c-fDzwZw-jpgoGt-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-jpgoGt-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw-cmVfvW-cv {
    background: transparent;
    color: var(--colors-primary);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):hover,
  .c-fDzwZw-cmVfvW-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-cmVfvW-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-cVSpVL-ihbtntv-css {
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieyRoAv-css {
    position: relative;
    margin-bottom: var(--space-4);
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-ihFPSGE-css {
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-illIiIE-css {
    margin-bottom: var(--space-4);
  }

  .c-GSaiK-ifYtQLP-css {
    cursor: initial;
  }

  .c-dhzjXW-ijroWjL-css {
    align-items: center;
  }

  .c-beXZpM-ihbpiMz-css {
    margin-right: var(--space-3);
  }

  .c-dyvMgW-igbZjeK-css {
    flex: none;
  }

  .c-dhzjXW-ibZmKkd-css {
    justify-content: flex-end;
  }

  .c-fDzwZw-illEebI-css {
    margin-right: var(--space-4);
  }

  .c-GSaiK-igsmDXe-css {
    cursor: pointer;
  }

  .c-dhzjXW-iczouOI-css {
    position: relative;
    align-items: center;
  }

  .c-dbrbZt-ifwENwN-css {
    position: absolute;
    left: var(--space-1);
  }

  .c-hjAYDb-iPJLV-css {
    transform: ;
    z-index: ;
  }

  .c-dlcCnN-iAsWAM-css {
    display: inline-block;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-iPJLV-css"
  >
    <thead
      class="c-PJLV c-PJLV-gzzGYN-theme-light"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            id
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            name
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            hobby
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-ifYtQLP-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            Actions
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-kqWICR-striped-false"
    >
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          1
        </td>
        <td
          class="c-cCZzXk"
        >
          chrissy
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          2
        </td>
        <td
          class="c-cCZzXk"
        >
          agatha
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          3
        </td>
        <td
          class="c-cCZzXk"
        >
          betty
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          4
        </td>
        <td
          class="c-cCZzXk"
        >
          denise
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          5
        </td>
        <td
          class="c-cCZzXk"
        >
          charlie
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          6
        </td>
        <td
          class="c-cCZzXk"
        >
          xena
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          7
        </td>
        <td
          class="c-cCZzXk"
        >
          rick
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          8
        </td>
        <td
          class="c-cCZzXk"
        >
          phillip
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          9
        </td>
        <td
          class="c-cCZzXk"
        >
          maurice
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          10
        </td>
        <td
          class="c-cCZzXk"
        >
          peter
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          11
        </td>
        <td
          class="c-cCZzXk"
        >
          velma
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          12
        </td>
        <td
          class="c-cCZzXk"
        >
          max
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          13
        </td>
        <td
          class="c-cCZzXk"
        >
          maxine
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          14
        </td>
        <td
          class="c-cCZzXk"
        >
          siobhan
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          15
        </td>
        <td
          class="c-cCZzXk"
        >
          nelly
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          16
        </td>
        <td
          class="c-cCZzXk"
        >
          kris
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          17
        </td>
        <td
          class="c-cCZzXk"
        >
          tony
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb c-hjAYDb-iPJLV-css"
      >
        <td
          class="c-cCZzXk"
        >
          <button
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-label="drag and drop"
            aria-roledescription="sortable"
            class="c-fDzwZw c-fDzwZw-elrktp-size-sm c-fDzwZw-cmVfvW-cv c-dlcCnN c-dlcCnN-kbKHjH-isDragging-false c-dlcCnN-iAsWAM-css"
            role="button"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0ZM8.5 5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 11.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1ZM7 17.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Zm5.5.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm1.5-.5a.5.5 0 1 0 0 1 .5.5 0 0 0 0-1Z"
              />
              <path
                d="M8 5h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1zm-7 6h1v1H8zm7 0h1v1h-1z"
              />
            </svg>
          </button>
          18
        </td>
        <td
          class="c-cCZzXk"
        >
          tina
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`DataTable component renders 1`] = `
@media  {
  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-fZTBsJ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-fZTBsJ:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-fZTBsJ[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fZTBsJ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }

  .c-eIXSIu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-variant-numeric: tabular-nums;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-beXZpM {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-beXZpM:hover {
    cursor: pointer;
  }

  .c-beXZpM:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-beXZpM::-ms-expand {
    display: none;
  }

  .c-beXZpM[disabled],
  .c-beXZpM > option[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-fZTBsJ-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-OveXb-size-md {
    top: 10px;
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-gzzGYN-theme-light .c-GSaiK {
    background: var(--colors-tonal50);
    color: var(--colors-tonal600);
  }

  .c-PJLV-kqWICR-striped-false {
    background: white;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-beXZpM-cGAtlD-size-sm {
    background-position: right var(--space-2) top 50%, 0 0;
    background-size: 18px auto, 100%;
    font-size: var(--fontSizes-sm);
    height: var(--sizes-3);
    padding-left: var(--space-2);
    padding-right: var(--space-5);
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-fDzwZw-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }
}

@media  {
  .c-fDzwZw-jpgoGt-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):hover,
  .c-fDzwZw-jpgoGt-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-jpgoGt-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-cVSpVL-ihbtntv-css {
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieyRoAv-css {
    position: relative;
    margin-bottom: var(--space-4);
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-ihFPSGE-css {
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-illIiIE-css {
    margin-bottom: var(--space-4);
  }

  .c-GSaiK-ifYtQLP-css {
    cursor: initial;
  }

  .c-dhzjXW-ijroWjL-css {
    align-items: center;
  }

  .c-beXZpM-ihbpiMz-css {
    margin-right: var(--space-3);
  }

  .c-dyvMgW-igbZjeK-css {
    flex: none;
  }

  .c-dhzjXW-ibZmKkd-css {
    justify-content: flex-end;
  }

  .c-fDzwZw-illEebI-css {
    margin-right: var(--space-4);
  }

  .c-GSaiK-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <label
    class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block c-cVSpVL-ihbtntv-css"
    for="User search"
  >
    User search
  </label>
  <div
    class="c-PJLV c-PJLV-ieyRoAv-css"
  >
    <input
      class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      name="User search"
      type="search"
      value=""
    />
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-hvMhuR c-hvMhuR-OveXb-size-md c-hvMhuR-ihFPSGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.412 14.412 20 20"
      />
      <circle
        cx="10"
        cy="10"
        r="6"
      />
    </svg>
  </div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-illIiIE-css"
  >
    <thead
      class="c-PJLV c-PJLV-gzzGYN-theme-light"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            id
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            name
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            hobby
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-ifYtQLP-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            Actions
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-kqWICR-striped-false"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          1
        </td>
        <td
          class="c-cCZzXk"
        >
          chrissy
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          2
        </td>
        <td
          class="c-cCZzXk"
        >
          agatha
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          3
        </td>
        <td
          class="c-cCZzXk"
        >
          betty
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          4
        </td>
        <td
          class="c-cCZzXk"
        >
          denise
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          5
        </td>
        <td
          class="c-cCZzXk"
        >
          charlie
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          6
        </td>
        <td
          class="c-cCZzXk"
        >
          xena
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          7
        </td>
        <td
          class="c-cCZzXk"
        >
          rick
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          8
        </td>
        <td
          class="c-cCZzXk"
        >
          phillip
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          9
        </td>
        <td
          class="c-cCZzXk"
        >
          maurice
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          10
        </td>
        <td
          class="c-cCZzXk"
        >
          peter
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c-eIXSIu"
  >
    <p
      class="c-dyvMgW c-dyvMgW-bndJoy-size-sm"
    >
      1 - 10 of 18 items
    </p>
    <div
      class="c-dhzjXW c-dhzjXW-ijroWjL-css"
    >
      <select
        class="c-beXZpM c-beXZpM-cGAtlD-size-sm c-beXZpM-ihbpiMz-css"
      >
        <option
          value="0"
        >
          1
        </option>
        <option
          value="1"
        >
          2
        </option>
      </select>
      <p
        class="c-dyvMgW c-dyvMgW-bndJoy-size-sm c-dyvMgW-igbZjeK-css"
      >
        of 2 pages
      </p>
    </div>
    <div
      class="c-dhzjXW c-dhzjXW-ibZmKkd-css"
    >
      <button
        aria-label="Previous page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-rloUt-isRounded-true c-fDzwZw-jpgoGt-cv c-fDzwZw-illEebI-css c-PJLV"
        data-state="closed"
        disabled=""
        name="Previous page"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <button
        aria-label="Next page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-rloUt-isRounded-true c-fDzwZw-jpgoGt-cv c-PJLV"
        data-state="closed"
        name="Next page"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`DataTable server-side renders 1`] = `
@media  {
  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-fZTBsJ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-fZTBsJ:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-fZTBsJ[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fZTBsJ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-cNcGUX::-webkit-search-decoration,
  .c-cNcGUX::-webkit-search-cancel-button,
  .c-cNcGUX::-webkit-search-results-button,
  .c-cNcGUX input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hvMhuR {
    color: var(--colors-tonal300);
    position: absolute;
    pointer-events: none;
  }

  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-GSaiK {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-cCZzXk {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    padding: var(--space-2) var(--space-3);
    text-align: left;
    vertical-align: middle;
  }

  .c-cCZzXk:first-child {
    font-weight: bold;
  }

  .c-eIXSIu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-variant-numeric: tabular-nums;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-beXZpM {
    -webkit-appearance: none;
    appearance: none;
    background-color: white;
    background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23757575%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23757575%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
    background-repeat: no-repeat, repeat;
    border: 1px solid var(--colors-tonal300);
    border-radius: var(--radii-0);
    color: var(--colors-tonal600);
    display: block;
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-beXZpM:hover {
    cursor: pointer;
  }

  .c-beXZpM:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-beXZpM::-ms-expand {
    display: none;
  }

  .c-beXZpM[disabled],
  .c-beXZpM > option[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-dlcCnN {
    color: inherit !important;
    fill: currentColor;
  }

  .c-jBOHFZ {
    animation-name: k-gJNjLs;
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    background-color: currentColor;
    border-radius: var(--radii-round);
  }

  .c-jBOHFZ:nth-child(1) {
    animation-delay: -300ms;
  }

  .c-jBOHFZ:nth-child(2) {
    animation-delay: -150ms;
  }

  .c-jBOHFZ:nth-child(3) {
    animation-delay: 0;
  }

  .c-deGxWL {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-fZTBsJ-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hvMhuR-OveXb-size-md {
    top: 10px;
    right: 10px;
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-gWDrUk-size-md .c-cCZzXk,
  .c-cwQMhQ-gWDrUk-size-md .c-GSaiK,
  .c-cwQMhQ-gWDrUk-size-md .c-hYjVQ {
    height: var(--sizes-4);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-GSaiK:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fofZjp-corners-round .c-hjAYDb:last-child .c-cCZzXk:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-gzzGYN-theme-light .c-GSaiK {
    background: var(--colors-tonal50);
    color: var(--colors-tonal600);
  }

  .c-PJLV-kqWICR-striped-false {
    background: white;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-beXZpM-cGAtlD-size-sm {
    background-position: right var(--space-2) top 50%, 0 0;
    background-size: 18px auto, 100%;
    font-size: var(--fontSizes-sm);
    height: var(--sizes-3);
    padding-left: var(--space-2);
    padding-right: var(--space-5);
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-fDzwZw-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-dbrbZt-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-fDzwZw-elrktp-size-sm {
    height: var(--sizes-3);
    width: var(--sizes-3);
  }

  .c-dlcCnN-kbKHjH-isDragging-false {
    cursor: grab;
  }

  .c-jBOHFZ-jIYkAt-size-md {
    height: 6px;
    width: 6px;
    margin-left: 2px;
    margin-right: 2px;
  }
}

@media  {
  .c-fDzwZw-jpgoGt-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):hover,
  .c-fDzwZw-jpgoGt-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-jpgoGt-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-jpgoGt-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw-cmVfvW-cv {
    background: transparent;
    color: var(--colors-primary);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):hover,
  .c-fDzwZw-cmVfvW-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-cmVfvW-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-cVSpVL-ihbtntv-css {
    margin-bottom: var(--space-3);
  }

  .c-PJLV-ieyRoAv-css {
    position: relative;
    margin-bottom: var(--space-4);
  }

  .c-cNcGUX-icRYcAH-css {
    padding-right: var(--space-6);
  }

  .c-hvMhuR-ihFPSGE-css {
    height: 20px;
    width: 20px;
  }

  .c-cwQMhQ-illIiIE-css {
    margin-bottom: var(--space-4);
  }

  .c-GSaiK-ifYtQLP-css {
    cursor: initial;
  }

  .c-dhzjXW-ijroWjL-css {
    align-items: center;
  }

  .c-beXZpM-ihbpiMz-css {
    margin-right: var(--space-3);
  }

  .c-dyvMgW-igbZjeK-css {
    flex: none;
  }

  .c-dhzjXW-ibZmKkd-css {
    justify-content: flex-end;
  }

  .c-fDzwZw-illEebI-css {
    margin-right: var(--space-4);
  }

  .c-GSaiK-igsmDXe-css {
    cursor: pointer;
  }

  .c-dhzjXW-iczouOI-css {
    position: relative;
    align-items: center;
  }

  .c-dbrbZt-ifwENwN-css {
    position: absolute;
    left: var(--space-1);
  }

  .c-hjAYDb-iPJLV-css {
    transform: ;
    z-index: ;
  }

  .c-dlcCnN-iAsWAM-css {
    display: inline-block;
  }

  .c-PJLV-icmpvrW-css {
    position: relative;
  }

  .c-fDzwZw-ifWWfIb-css {
    position: absolute;
    top: 0;
    right: var(--space-1);
  }

  .c-dhzjXW-ibICGYT-css {
    justify-content: center;
  }

  .c-cwQMhQ-igyXmJO-css {
    margin-bottom: var(--space-4);
    opacity: 0.5;
    pointer-events: none;
    transition: opacity 250ms linear 150ms;
  }
}

<div>
  <label
    class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block c-cVSpVL-ihbtntv-css"
  />
  <div
    class="c-PJLV c-PJLV-icmpvrW-css"
  >
    <input
      class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-cNcGUX c-cNcGUX-icRYcAH-css"
      type="search"
      value=""
    />
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-hvMhuR c-hvMhuR-OveXb-size-md c-hvMhuR-ihFPSGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.412 14.412 20 20"
      />
      <circle
        cx="10"
        cy="10"
        r="6"
      />
    </svg>
  </div>
  <table
    class="c-cwQMhQ c-cwQMhQ-gWDrUk-size-md c-cwQMhQ-fofZjp-corners-round c-cwQMhQ-illIiIE-css"
  >
    <thead
      class="c-PJLV c-PJLV-gzzGYN-theme-light"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            id
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            name
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-igsmDXe-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            hobby
          </div>
        </th>
        <th
          class="c-GSaiK c-GSaiK-ifYtQLP-css"
        >
          <div
            class="c-dhzjXW c-dhzjXW-ijroWjL-css"
          >
            Actions
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-kqWICR-striped-false"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          1
        </td>
        <td
          class="c-cCZzXk"
        >
          chrissy
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          2
        </td>
        <td
          class="c-cCZzXk"
        >
          agatha
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          3
        </td>
        <td
          class="c-cCZzXk"
        >
          betty
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          4
        </td>
        <td
          class="c-cCZzXk"
        >
          denise
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          5
        </td>
        <td
          class="c-cCZzXk"
        >
          charlie
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          6
        </td>
        <td
          class="c-cCZzXk"
        >
          xena
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          7
        </td>
        <td
          class="c-cCZzXk"
        >
          rick
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          8
        </td>
        <td
          class="c-cCZzXk"
        >
          phillip
        </td>
        <td
          class="c-cCZzXk"
        >
          crossfit
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          9
        </td>
        <td
          class="c-cCZzXk"
        >
          maurice
        </td>
        <td
          class="c-cCZzXk"
        >
          acting
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-cCZzXk"
        >
          10
        </td>
        <td
          class="c-cCZzXk"
        >
          peter
        </td>
        <td
          class="c-cCZzXk"
        >
          bare-knuckle boxing
        </td>
        <td
          class="c-cCZzXk"
        >
          <button>
            do something
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c-eIXSIu"
  >
    <p
      class="c-dyvMgW c-dyvMgW-bndJoy-size-sm"
    >
      1 - 10 of 18 items
    </p>
    <div
      class="c-dhzjXW c-dhzjXW-ijroWjL-css"
    >
      <select
        class="c-beXZpM c-beXZpM-cGAtlD-size-sm c-beXZpM-ihbpiMz-css"
      >
        <option
          value="0"
        >
          1
        </option>
        <option
          value="1"
        >
          2
        </option>
      </select>
      <p
        class="c-dyvMgW c-dyvMgW-bndJoy-size-sm c-dyvMgW-igbZjeK-css"
      >
        of 2 pages
      </p>
    </div>
    <div
      class="c-dhzjXW c-dhzjXW-ibZmKkd-css"
    >
      <button
        aria-label="Previous page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-rloUt-isRounded-true c-fDzwZw-jpgoGt-cv c-fDzwZw-illEebI-css c-PJLV"
        data-state="closed"
        disabled=""
        name="Previous page"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <button
        aria-label="Next page"
        class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-rloUt-isRounded-true c-fDzwZw-jpgoGt-cv c-PJLV"
        data-state="closed"
        name="Next page"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;
